cabal-version:      2.4
name:               examples
version:            0.1.0.0

author:             Nikita Aleshchenko
maintainer:         n.aleshchenko@tinkoff.ru

library
    exposed-modules:
    build-depends:      base >= 4.12.0.0
                      , pureMQ
                      , pureMQ-mvcc
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: BangPatterns
                      , BlockArguments
                      , ConstraintKinds
                      , DataKinds
                      , DeriveFoldable
                      , DeriveFunctor
                      , DeriveGeneric
                      , DeriveTraversable
                      , DerivingStrategies
                      , DerivingVia
                      , DuplicateRecordFields
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , KindSignatures
                      , LambdaCase
                      , MultiParamTypeClasses
                      , MultiWayIf
                      , NumDecimals
                      , NumericUnderscores
                      , OverloadedLabels
                      , OverloadedStrings
                      , PolyKinds
                      , QuasiQuotes
                      , RankNTypes
                      , RecordWildCards
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TemplateHaskell
                      , TupleSections
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , ViewPatterns

executable single-db-transactions
    main-is:          SingleDB.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   bin
    default-language: Haskell2010
