cabal-version:      2.4
name:               pureMQ-mvcc
version:            0.1.0.0

author:             Nikita Aleshchenko
maintainer:         n.aleshchenko@tinkoff.ru

library
    exposed-modules:    PureMQ.MVCC.Types
                      , PureMQ.MVCC.Transaction
    build-depends:      base >= 4.12.0.0
                      , containers
                      , fused-effects
                      , bytestring
                      , generic-lens
                      , microlens
                      , text
                      , unagi-chan
                      , pureMQ
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: BangPatterns
                      , BlockArguments
                      , ConstraintKinds
                      , DataKinds
                      , DeriveFoldable
                      , DeriveFunctor
                      , DeriveGeneric
                      , DeriveTraversable
                      , DerivingStrategies
                      , DerivingVia
                      , DuplicateRecordFields
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , KindSignatures
                      , LambdaCase
                      , MultiParamTypeClasses
                      , MultiWayIf
                      , NumDecimals
                      , NumericUnderscores
                      , OverloadedLabels
                      , OverloadedStrings
                      , PolyKinds
                      , QuasiQuotes
                      , RankNTypes
                      , RecordWildCards
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TemplateHaskell
                      , TupleSections
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , ViewPatterns

test-suite spec
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base >=4.12.0.0
