cabal-version:      2.4
name:               pureMQ
version:            0.1.0.0

author:             Nikita Aleshchenko
maintainer:         n.aleshchenko@tinkoff.ru

library
    exposed-modules:    Control.Carrier.Transaction.Cancel
                      , Control.Effect.Storage
                      , Control.Effect.Storage.KeyValue
                      , Control.Effect.Storage.Queue
                      , Control.Effect.Storage.Single.KeyValue
                      , Control.Effect.Storage.Single.Queue
                      , Control.Effect.Transaction
                      , Control.Effect.Transaction.Cancel
                      , Control.Effect.Transaction.Low
                      , PureMQ.Database
                      , PureMQ.GlobalTransactions
                      , PureMQ.Types
    build-depends:      base >= 4.12.0.0
                      , containers
                      , exceptions
                      , fused-effects
                      , fused-effects-exceptions
                      , bytestring
                      , generic-lens
                      , microlens
                      , microlens-th
                      , text
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: BangPatterns
                      , BlockArguments
                      , ConstraintKinds
                      , DataKinds
                      , DeriveFoldable
                      , DeriveFunctor
                      , DeriveGeneric
                      , DeriveTraversable
                      , DerivingStrategies
                      , DerivingVia
                      , DuplicateRecordFields
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , KindSignatures
                      , LambdaCase
                      , MultiParamTypeClasses
                      , MultiWayIf
                      , NumDecimals
                      , NumericUnderscores
                      , OverloadedLabels
                      , OverloadedStrings
                      , PolyKinds
                      , QuasiQuotes
                      , RankNTypes
                      , RecordWildCards
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TemplateHaskell
                      , TupleSections
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , ViewPatterns

test-suite spec
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base >=4.12.0.0
